Bug 1044975 - Don't crash if mapping D3D11 shader constant buffers fails. r=Bas a=sledru

--HG--
extra : amend_source : cd4fd84e9aa18958e2e091e0c2a331e1163ff261